--- a/site yasmin 3c/index.html
+++ b/site yasmin 3c/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <section class="conteudo-principal">
-
-    <h2>meus objetivos do ano_</h2>
-
-    <div class="botao">
-
-        <button class="botao">Estudar cursos do alura</button>
-        <button class="botao">criar projetos em Javescript</button>
-        <button class="botao">criar portifolio</button>
-        <button class="botao">criar portifolio</button>
-        <button class="botao">atualizar meu curriculos</button>
-
-    </section>
+    
+<section class="conteudo-principal">
+    <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
+<div class="botoes">
+    <button class="botao">Cursos na Alura</button>
+    <button class="botao">Criar projetos em Javascript</button>
+    <button class="botao">Criar um portfolio</button>
+    <button class="botao">Atualizar meu currículo</button>
+</div>
+</section>
 
 </body>
 </html>
