--- a/site yasmin 3c/index.html
+++ b/site yasmin 3c/index.html
@@ -15,7 +15,7 @@
             <div class="botoes">
                 <button class="botao ativo">Estudar para o ENEM</button>
                 <button class="botao">Formatura</button>
-                <button class="botao">Criar um portfolio</button>
+                <button class="botao">Curso de auxiliar de veterinaria</button>
                 <button class="botao">Casar</button>
             </div>
             <div class="abas-textos">
@@ -64,8 +64,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Começar o curso</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Terminar com honras</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias2"></p>
